--- a/src/dash/templates/history.html
+++ b/src/dash/templates/history.html
@@ -3,7 +3,7 @@
 
 {% block head %}
   <script src="{% static 'js/history.js' %}"></script>
-  <title>Magma - Historico</title>
+  <title>Magma - Certificados</title>
 {% endblock %}
 
 {% block body %}
