--- a/src/dash/templates/history.html
+++ b/src/dash/templates/history.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-    <h3>Visualizar Certificados</h3>
+    <h3>Certificados Prontos</h3>
     <hr>
     <br>
     <div class="input-group mb-3">
