--- a/src/dash/templates/history.html
+++ b/src/dash/templates/history.html
@@ -3,11 +3,11 @@
 
 {% block head %}
   <script src="{% static 'js/history.js' %}"></script>
-  <title>Visualizar Certificados Gerados</title>
+  <title>Magma - Certificados</title>
 {% endblock %}
 
 {% block body %}
-    <h3>Certificados Prontos</h3>
+    <h3>Visualizar Certificados</h3>
     <hr>
     <br>
     <div class="input-group mb-3">
