--- a/src/dash/templates/dash.html
+++ b/src/dash/templates/dash.html
@@ -3,7 +3,7 @@
 
 {% block head %}
   <script src="{% static 'js/dash.js' %}"></script>
-  <title>Magma - DashBoard</title>
+  <title>Magma - DashBoard *</title>
 {% endblock %}
 
 
