update script deployment

--- a/src/dash/templates/dash.html
+++ b/src/dash/templates/dash.html
@@ -3,7 +3,7 @@
 
 {% block head %}
   <script src="{% static 'js/dash.js' %}"></script>
-  <title>Magma - DashBoard *</title>
+  <title>Magma - DashBoard</title>
 {% endblock %}
 
 
@@ -12,7 +12,7 @@
 <div>
     <h4> Dashboard </h4>
     <hr>
-    <h5>Quantidade de Certificados</h5>
+    <h5>Certificados por Modelo</h5>
     <canvas id="myChart" style="max-width: 700px;max-height: 700px;"></canvas>
 
     <label id="json" style="display:none;"> {{certificates}}</label>
