--- a/src/dash/templates/dash.html
+++ b/src/dash/templates/dash.html
@@ -10,7 +10,7 @@
 {% block body %}
 
 <div>
-    <h4> Dashboard (EM CONSTRUÇÃO)</h4>
+    <h4> Dashboard</h4>
     <hr>
     <h5>Certificados por Modelo</h5>
     <canvas id="myChart" style="max-width: 700px;max-height: 700px;"></canvas>
